--- a/package.json
+++ b/package.json
@@ -4,12 +4,13 @@
   "description": "Simple logger",
   "main": "src/loog.mjs",
   "module": "src/loog.mjs",
-  "browser": "dist/loog.js",
+  "browser": "dist/loog.min.js",
   "scripts": {
-    "build": "rimraf dist/* && webpack --mode development",
-    "build:prod": "rimraf dist/* && webpack --mode production",
+    "build": "webpack --mode development",
+    "build:prod": "webpack --config webpack.prod.js",
     "show:term": "node __tests__/showcase.mjs",
-    "show:browser": "yarn build && start __tests__/showcase.html",
+    "show:web": "yarn build && start __tests__/showcase.html",
+    "clean": "rimraf dist/*",
     "test": "jest"
   },
   "keywords": [
@@ -41,7 +42,9 @@
     "jest": "^25.1.0",
     "prettier": "^1.19.1",
     "rimraf": "^3.0.2",
+    "terser-webpack-plugin": "^2.3.5",
     "webpack": "^4.42.0",
-    "webpack-cli": "^3.3.11"
+    "webpack-cli": "^3.3.11",
+    "webpack-merge": "^4.2.2"
   }
 }
