--- a/package.json
+++ b/package.json
@@ -13,13 +13,15 @@
     "logger",
     "console"
   ],
-  "main": "src/loog.mjs",
-  "module": "src/loog.mjs",
+  "main": "dist/loog.min.js",
+  "module": "dist/loog.min.js",
   "scripts": {
     "build": "webpack --mode development",
     "build:prod": "webpack --config webpack.prod.js",
-    "show:term": "node __tests__/showcase.mjs",
-    "show:web": "yarn build && start __tests__/showcase.html",
+    "build:all": "yarn run build && yarn run build:prod",
+    "show:cjs": "yarn run build && node __tests__/showcase.js",
+    "show:es": "yarn run build && node __tests__/showcase.mjs",
+    "show:web": "yarn run build && start __tests__/showcase.html",
     "clean": "rimraf dist/*",
     "test": "jest"
   },
